--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "date-fns": "^1.28.5",
+    "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
     "request": "^2.81.0"
   },
