--- a/event-repeater/package.json
+++ b/event-repeater/package.json
@@ -3,7 +3,7 @@
   "private": "true",
   "version": "1.0.0",
   "description": "",
-  "main": "event-repeater.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint *.js"
@@ -15,14 +15,18 @@
     "date-fns": "^1.29.0",
     "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
-    "request": "^2.81.0"
+    "prettier": "^1.12.1",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier-standard": "^1.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-standard": "^3.0.1"
   }
 }
