--- a/event-repeater/package.json
+++ b/event-repeater/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "lodash": "^4.17.11",
     "prettier": "^1.12.1",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
